c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_lex/invalid_identifier.c
/* '1foo' is not a valid token, because identifier can't start with digits. */
int main(void) {
    return 1foo;
}